@@ -15,7 +15,8 @@ Revision history for {{$dist->name}}
     name to see which one is preferred by the operating system, or user.
    
   - Slightly more consistent diagnostic messages.
-  - Add which and where functions (not exported by default)
+  - Added functions: which, where, has_symbols
+    None are exported by default, but may be requested.
 
 0.16      2017-08-08 10:24:49 -0400
   - Tentative support for msys
